object detection and other addition

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script>function onGooglePayLoaded() {
+      window.googlePayClient = new google.payments.api.PaymentsClient({
+        environment: "TEST"
+      });
+    }</script>
+    <script
+  async
+  src="https://pay.google.com/gp/p/js/pay.js"
+  onload="onGooglePayLoaded()"
+></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
